--- a/parcel1Angular/demo/src/app/nav/nav.component.html
+++ b/parcel1Angular/demo/src/app/nav/nav.component.html
@@ -1,10 +1,10 @@
 <nav>
   <ul>
     <li>
-      <a aria-current="page" routerLink="/">Payment</a>
+      <a aria-current="page" routerLink="/app1">Payment</a>
     </li>
     <li>
-      <a routerLink="/success">Success</a>
+      <a routerLink="/app1/success">Success</a>
     </li>
   </ul>
 </nav>
